// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CDStageDetails /> tests snapshot test 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="main"
    >
      <div>
        <div
          class="title"
        >
          serviceOrServices
        </div>
        <ul
          class="values"
        >
          <li>
            <div
              class="bp3-popover-wrapper serviceWrapper"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="serviceName"
                  data-testid="serviceLink"
                  tabindex="0"
                >
                  <a
                    href="/account/accountId/cd/orgs/orgIdentifier/projects/projectIdentifier/services/Order"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main stageItemDetails"
                      style="--text-line-clamp: 1;"
                    >
                      Order
                    </p>
                  </a>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div>
        <div
          class="title"
        >
          environmentOrEnvironments
        </div>
        <ul
          class="values"
          data-testid="environmentLink"
        >
          <a
            href="/account/accountId/cd/orgs/orgIdentifier/projects/projectIdentifier/environments/Production/details?sectionId=INFRASTRUCTURE"
          >
            <li>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main stageItemDetails"
                style="--text-line-clamp: 1;"
              >
                Production
              </p>
            </li>
          </a>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CDStageDetails /> tests test gitops apps 1`] = `
<div
  data-test-id="GitopsApplications"
>
  <div
    class="title"
  >
    applications
  </div>
  <ul
    class="values"
  >
    <li
      class="gitOpsAppsLi"
    >
      <a
        href="/account/accountId/cd/orgs/orgIdentifier/projects/projectIdentifier/gitops/applications/ID_1?agentId=AGENT_1"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          NAME_1
        </p>
      </a>
      <span
        class="bp3-popover-wrapper serviceWrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <span
            class=""
            tabindex="0"
          >
            , +
            2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
